--- a/sqlc.yml
+++ b/sqlc.yml
@@ -1,8 +1,8 @@
 version: "2"
 sql:
   - engine: "sqlite"
-    queries: "query.sql"
-    schema: "schema.sql"
+    queries: "sql/queries/*"
+    schema: "sql/schema.sql"
     gen:
       go:
         package: "db"
